@@ -1,3 +1,5 @@
+- Refactor: Removes usages of commons-httpclient [#qubIT-Omnis-5730]
+
 2.16.12 (10-04-2024)
 - Bug fix: PRIES salary bonus (update XSD) [#UL-REIT-3777]
 
